--- a/online_results/src/main/webapp/index.html
+++ b/online_results/src/main/webapp/index.html
@@ -1,3 +1,6 @@
+<!---batch table with batch as a column and teacher_login table with teacher_id teacher_name teacher_password as columns should be created first. Different batch tables and student_login table will be created and updated dynamically.__----> 
+
+
 <!DOCTYPE html>
 <html>
 <head>
